minor improvements by FindBugs (and stop him throwing some false alarms).
git-svn-id: https://svn.jboss.org/repos/hibernate/search/trunk@14749 1b8cb986-b30d-0410-93ca-fae66ebed9b2